java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateField1-hints.pass
Create field test in org.netbeans.test.java.hints.CreateField1
Create parameter test
Create local variable test
